fix the header profile alignments and text; 320 profile picture position;

--- a/Project 2/css/styles.css
+++ b/Project 2/css/styles.css
@@ -4,10 +4,6 @@ body {
     padding: 0em 0.5em;
 }
 
-#introP {
-    font-family: sans-serif;
-}
-
 .studentName {
     text-decoration: none;
 }
@@ -26,19 +22,24 @@ a:hover {
     color: forestgreen;
 }
 
+.float-rt {
+  float: right;
+}
+
+#profile {
+  font-family: sans-serif;
+  text-align: center;
+  width: 100%;
+}
 .propic {
-    width: 80%;
-    margin: 0.25em;
+   width: 70%;
+   margin: 0 0.5em;
 }
 
 #headingPortfolio {
     line-height: 6em;
     font-weight: bold;
     font-size: 1em;
-}
-
-.float-rt {
-    float: right;
 }
 
 
@@ -77,8 +78,10 @@ clear-all {
         float: left;
     }
     .propic {
-        vertical-align: top;
         width: 40%;
+    }
+    .float-rt-768 {
+      float: right;
     }
 }
 
@@ -102,7 +105,5 @@ clear-all {
         margin: 0.25em;
         float: left;
     }
-    #propic {
-        width: 20%;
-    }
 }
+
